[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-audio-receiver"
version = "0.1.0"
description = "Bluetooth audio receiver for Windows and Linux with A2DP Sink support"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [{name = "Alexandre Ramos", email = "alexandremarquesramos11@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
windows = [
    "pywinrt>=2.0.0",
    "pycaw>=0.3.0",
    "comtypes>=1.4.0",
]
linux = [
    "dbus-python>=1.3.0",
    "PyGObject>=3.46.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.3.0",
]

[project.scripts]
open-audio-receiver = "open_audio_receiver.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I"]